TEST_PROGRAMS/INVALID/evan_mcilroy/invalid_one.min
a = "IM A DANCING BEAR %"
a = -0;
a = .



